1.增加redis缓存登录信息 2.新建拦截器，验证是否登录

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,17 @@ spring:
     url: jdbc:mysql://localhost:3306/as_api?characterEncoding=utf8&useSSL=true
     username: root
     password: 123456789
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    timeout: 6000
+#    password:
+    jedis:
+      pool:
+        max-active: 1000
+        max-wait: -1
+        max-idle: 10
+        min-idle: 5
 mybatis:
   mapper-locations: classpath:mybatis/*.xml #对应mapper映射xml文件所在路径
   type-aliases-package: com.liucj.as.api.entity #对应实体类路径
