1.增加redis缓存登录信息 2.新建拦截器，验证是否登录

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,4 +23,9 @@ mybatis:
   type-aliases-package: com.liucj.as.api.entity #对应实体类路径
   configuration:
     map-underscore-to-camel-case: true #数据库下划线是否转驼峰名
+pagehelper:
+    helperDialect: mysql
+    reasonable: true
+    supportMethodsArguments: true
+    params: count=countSql
 
